[imad-console] Updates ui/article1.html

--- a/ui/article1.html
+++ b/ui/article1.html
@@ -4,9 +4,18 @@
             Article one by Pranav Gupta!!!
         </title>
         <meta name="viewport" content="width=device-width , initial-scale=1" /> 
+        <style>
+            .container{
+                font-family: sans-serif;
+                color:green;
+                margin: 0 auto;
+                max-width: 800px;
+            }
+        </style>
     </head>
     <body>
         <a href='/'> Home</a>
+        <div class="container">
         <div>
             <h1>
                 Article 1
@@ -21,6 +30,7 @@
             <p> This is the ontent of article 1.This is the ontent of article 1.This is the ontent of article 1.This is the ontent of article 1.This is the ontent of article 1.This is the ontent of article 1.This is the ontent of article 1.This is the ontent of article 1.This is the ontent of article 1.This is the ontent of article 1.This is the ontent of article 1.This is the ontent of article 1.This is the ontent of article 1.This is the ontent of article 1.</p>
             <p> This is the ontent of article 1.This is the ontent of article 1.This is the ontent of article 1.This is the ontent of article 1.This is the ontent of article 1.This is the ontent of article 1.This is the ontent of article 1.This is the ontent of article 1.This is the ontent of article 1.This is the ontent of article 1.This is the ontent of article 1.This is the ontent of article 1.This is the ontent of article 1.This is the ontent of article 1.</p>
             <p> This is the ontent of article 1.This is the ontent of article 1.This is the ontent of article 1.This is the ontent of article 1.This is the ontent of article 1.This is the ontent of article 1.This is the ontent of article 1.This is the ontent of article 1.This is the ontent of article 1.This is the ontent of article 1.This is the ontent of article 1.This is the ontent of article 1.This is the ontent of article 1.This is the ontent of article 1.</p>
+        </div>
         </div>
     </body>
 </html>
