[imad-console] Updates ui/article3.html

--- a/ui/article3.html
+++ b/ui/article3.html
@@ -4,8 +4,17 @@
             Article three by Pranav Gupta!!!
         </title>
         <meta name="viewport" content="width=device-width , initial-scale=1" /> 
+        <style>
+            .container{
+                font-family: sans-serif;
+                color:green;
+                margin: 0 auto;
+                max-width: 800px;
+            }
+        </style>
     </head>
     <body>
+        <div class="container">
         <a href='/'> Home</a>
         <div>
             <h1>
@@ -21,6 +30,7 @@
             <p> This is the ontent of article 3.This is the ontent of article 1.This is the ontent of article 1.This is the ontent of article 1.This is the ontent of article 1.This is the ontent of article 1.This is the ontent of article 1.This is the ontent of article 1.This is the ontent of article 1.This is the ontent of article 1.This is the ontent of article 1.This is the ontent of article 1.This is the ontent of article 1.This is the ontent of article 1.</p>
             <p> This is the ontent of article 1.This is the ontent of article 1.This is the ontent of article 1.This is the ontent of article 1.This is the ontent of article 1.This is the ontent of article 1.This is the ontent of article 1.This is the ontent of article 1.This is the ontent of article 1.This is the ontent of article 1.This is the ontent of article 1.This is the ontent of article 1.This is the ontent of article 1.This is the ontent of article 1.</p>
             <p> This is the ontent of article 1.This is the ontent of article 1.This is the ontent of article 1.This is the ontent of article 1.This is the ontent of article 1.This is the ontent of article 1.This is the ontent of article 1.This is the ontent of article 1.This is the ontent of article 1.This is the ontent of article 1.This is the ontent of article 1.This is the ontent of article 1.This is the ontent of article 1.This is the ontent of article 1.</p>
+        </div>
         </div>
     </body>
 </html>
