--- a/ui/article1.html
+++ b/ui/article1.html
@@ -4,14 +4,8 @@
             Article one by Pranav Gupta!!!
         </title>
         <meta name="viewport" content="width=device-width , initial-scale=1" /> 
-        <style>
-            .container{
-                font-family: sans-serif;
-                color:green;
-                margin: 0 auto;
-                max-width: 800px;
-            }
-        </style>
+        <link href="/ui/style.css" rel="stylesheet" />
+        
     </head>
     <body>
         <a href='/'> Home</a>
