--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
         <div class="center text-big bold">
             Hi! I am Pranav Gupta.
         </div>
+        <script>
+            alert('hi I'm Javscript');
+        </script>
         <script type="text/javascript" src="/ui/main.js">
         </script>
     </body>
