--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             Hi! I am Pranav Gupta.
         </div>
         <script>
-            alert('hi I\'m Javscript');
+            alert("hi Im Javscript");
         </script>
         <script type="text/javascript" src="/ui/main.js">
         </script>
