[imad-console] Updates index.html

--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
             Hi! I am Pranav Gupta.
         </div>
         <script>
-            alert("hi Im Javscript");
+            alert('hi Im Javscript');
         </script>
+        
         <script type="text/javascript" src="/ui/main.js">
         </script>
     </body>
