[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -12,6 +12,10 @@
             Hi! I am Pranav Gupta
             <h1> new heading</h1>
         </div>
+        <script>
+            alert('hi Im Javscript');
+        </script>
+        
         <script type="text/javascript" src="/ui/main.js">
         </script>
     </body>
